--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,37 +1,134 @@
 {
-    "root": true,
-    "env": {
-        "browser": true,
-        "es2021": true,
-        "jest": true
+  "root": true,
+  "globals": {
+    "JSX": "readonly",
+    "React": "readonly"
+  },
+  "parser": "@typescript-eslint/parser",
+  "plugins": ["react-hooks", "prettier", "eslint-plugin-sort-imports-es6-autofix"],
+  "extends": [
+    "react-app",
+    "react-app/jest",
+    "eslint:recommended",
+    "plugin:react-hooks/recommended",
+    "plugin:prettier/recommended",
+    "plugin:jsx-a11y/recommended"
+  ],
+  "env": {
+    "browser": true,
+    "es6": true
+  },
+  "settings": {
+    "react": {
+      "version": "17.0.2"
     },
-    "extends": [
-        "react-app",
-        "react-app/jest",
-        "plugin:import/typescript",
-        "plugin:prettier/recommended"
-    ],
-    "parser": "@typescript-eslint/parser",
-    "parserOptions": {
-        "ecmaFeatures": {
-            "jsx": true
-        },
-        "ecmaVersion": "latest",
-        "sourceType": "module",
-        "tsconfigRootDir": "rect-ts-project",
-        "project": "**/tsconfig.json"
-    },
-    "plugins": ["react", "@typescript-eslint", "prettier"],
-    "rules": {
-        "prettier/prettier": [
-            "error",
-            {
-                "endOfLine": "auto"
-            }
-        ],
-        "react/react-in-jsx-scope": ["off"],
-        "react/jsx-uses-react": ["off"],
-        "react/jsx-props-no-spreading": ["off"],
-        "react/no-unescaped-entities": ["off"]
+    "import/resolver": {
+      "webpack": {
+        "config": "./craco.config.js"
+      }
     }
+  },
+  "parserOptions": {
+    "ecmaVersion": 2021,
+    "project": "**/tsconfig.json",
+    "ecmaFeatures": {
+      "jsx": true,
+      "globalReturn": false
+    }
+  },
+  "rules": {
+    "semi": ["error", "always"],
+    "prettier/prettier": "warn",
+    "no-duplicate-imports": [
+      "error",
+      {
+        "includeExports": true
+      }
+    ],
+    "eqeqeq": "error",
+    "sort-imports-es6-autofix/sort-imports-es6": [
+      1,
+      {
+        "ignoreCase": false,
+        "ignoreMemberSort": false,
+        "memberSyntaxSortOrder": ["none", "all", "multiple", "single"]
+      }
+    ],
+    "no-console": [
+      "warn",
+      {
+        "allow": ["warn", "error", "debug", "info"]
+      }
+    ],
+    "no-unreachable": "warn",
+    "no-unused-vars": "off",
+    "jsx-a11y/no-autofocus": "off",
+    "@typescript-eslint/no-explicit-any": "warn",
+    "@typescript-eslint/prefer-for-of": "warn",
+    "@typescript-eslint/prefer-readonly": "warn",
+    "@typescript-eslint/no-non-null-assertion": "off",
+    "@typescript-eslint/no-unused-vars": "off",
+    "@typescript-eslint/naming-convention": [
+      "warn",
+      {
+        "selector": "default",
+        "format": ["camelCase"]
+      },
+      {
+        "selector": "variableLike",
+        "leadingUnderscore": "allow",
+        "format": ["camelCase", "PascalCase"]
+      },
+      {
+        "selector": "memberLike",
+        "format": ["camelCase"]
+      },
+      {
+        "selector": "typeLike",
+        "format": ["PascalCase"]
+      },
+      {
+        "selector": "enumMember",
+        "format": ["PascalCase", "UPPER_CASE"]
+      },
+      {
+        "selector": "variable",
+        "leadingUnderscore": "allow",
+        "format": ["camelCase", "PascalCase"]
+      },
+      {
+        "selector": "variable",
+        "types": ["boolean", "array"],
+        "format": ["camelCase"]
+      },
+      {
+        "selector": "variable",
+        "types": ["string", "number"],
+        "format": ["camelCase", "UPPER_CASE"],
+        "leadingUnderscore": "allow"
+      },
+      {
+        "selector": "property",
+        "leadingUnderscore": "allow",
+        "format": ["camelCase", "UPPER_CASE", "PascalCase"]
+      },
+      {
+        "selector": "objectLiteralProperty",
+        "leadingUnderscore": "allow",
+        "format": null
+      },
+      {
+        "selector": "accessor",
+        "leadingUnderscore": "allow",
+        "format": ["camelCase", "PascalCase"]
+      },
+      {
+        "selector": "function",
+        "format": ["camelCase", "PascalCase"]
+      }
+    ],
+    "@typescript-eslint/explicit-member-accessibility": ["error"],
+    "@typescript-eslint/no-inferrable-types": "off",
+    "no-debugger": "warn"
+  }
 }
