--- a/.prettierrc
+++ b/.prettierrc
@@ -1,11 +1,12 @@
 {
-    "tabWidth": 4,
-    "semi": true,
-    "singleQuote": false,
-    "trailingComma": "all",
-    "printWidth": 80,
-    "useTabs": false,
-    "endOfLine": "crlf",
-    "bracketSpacing": true,
-    "jsxBracketSameLine": true
+  "printWidth": 150,
+  "tabWidth": 2,
+  "semi": true,
+  "useTabs": false,
+  "singleQuote": true,
+  "trailingComma": "all",
+  "bracketSpacing": true,
+  "arrowParens": "always",
+  "endOfLine": "crlf",
+  "jsxBracketSameLine": true
 }
