--- a/package.json
+++ b/package.json
@@ -1,64 +1,65 @@
 {
-    "name": "react-ts-project",
-    "version": "0.1.0",
-    "private": true,
-    "dependencies": {
-        "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-        "@craco/craco": "^7.1.0",
-        "@types/jest": "^27.5.2",
-        "@types/node": "^16.18.40",
-        "@types/node-sass": "^4.11.3",
-        "@types/react": "^18.2.20",
-        "@types/react-dom": "^18.2.7",
-        "node-sass": "^9.0.0",
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0",
-        "react-router-dom": "^6.15.0",
-        "react-scripts": "^5.0.1",
-        "typescript": "^4.9.5",
-        "sass": "^1.65.1",
-        "sass-loader": "^13.3.2",
-        "web-vitals": "^2.1.4"
-    },
-    "scripts": {
-        "start": "craco start",
-        "build": "craco build",
-        "test": "craco test",
-        "eject": "craco eject",
-        "lint": "eslint .",
-        "lint:fix": "eslint --fix ."
-    },
-    "eslintConfig": {
-        "extends": [
-            "react-app",
-            "react-app/jest"
-        ]
-    },
-    "browserslist": {
-        "production": [
-            ">0.2%",
-            "not dead",
-            "not op_mini all"
-        ],
-        "development": [
-            "last 1 chrome version",
-            "last 1 firefox version",
-            "last 1 safari version"
-        ]
-    },
-    "devDependencies": {
-        "@typescript-eslint/eslint-plugin": "^5.62.0",
-        "craco-alias": "^3.0.1",
-        "eslint": "^8.47.0",
-        "eslint-config-airbnb-typescript": "^17.1.0",
-        "eslint-config-prettier": "^9.0.0",
-        "eslint-config-standard-with-typescript": "^37.0.0",
-        "eslint-plugin-import": "^2.28.0",
-        "eslint-plugin-n": "^16.0.1",
-        "eslint-plugin-prettier": "^5.0.0",
-        "eslint-plugin-promise": "^6.1.1",
-        "eslint-plugin-react": "^7.33.1",
-        "prettier": "^3.0.1",
-        "typescript": "^5.1.6"
-    }
+  "name": "react-ts-project",
+  "version": "0.1.0",
+  "private": true,
+  "dependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@craco/craco": "^7.1.0",
+    "@types/jest": "^27.5.2",
+    "@types/node": "^16.18.40",
+    "@types/node-sass": "^4.11.3",
+    "@types/react": "^18.2.20",
+    "@types/react-dom": "^18.2.7",
+    "node-sass": "^9.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.15.0",
+    "react-scripts": "^5.0.1",
+    "typescript": "^4.9.5",
+    "sass": "^1.65.1",
+    "sass-loader": "^13.3.2",
+    "web-vitals": "^2.1.4"
+  },
+  "scripts": {
+    "start": "craco start && eslint src/**/*.ts{,x}",
+    "build": "craco build",
+    "test": "craco test",
+    "eject": "craco eject",
+    "lint": "eslint .",
+    "lint:fix": "eslint src/**/*.ts{,x} --fix"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.62.0",
+    "craco-alias": "^3.0.1",
+    "eslint-config-airbnb-typescript": "^17.1.0",
+    "eslint-config-standard-with-typescript": "^37.0.0",
+    "eslint-plugin-import": "^2.28.0",
+    "eslint-plugin-n": "^16.0.1",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-react": "^7.33.1",
+    "typescript": "^5.1.6",
+    "eslint": "^8.47.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.0",
+    "eslint-plugin-sort-imports-es6-autofix": "^0.6.0",
+    "prettier": "^3.0.2"
+  }
 }
