--- a/tsconfig.extend.json
+++ b/tsconfig.extend.json
@@ -3,7 +3,8 @@
     "baseUrl": "./src",
     "paths": {
       "@components/*": ["./components/*"],
-      "@pages/*": ["./pages/*"]
+      "@pages/*": ["./pages/*"],
+      "@resources/*": ["./resources/*"]
     }
   }
 }
