--- a/tsconfig.extend.json
+++ b/tsconfig.extend.json
@@ -4,7 +4,8 @@
     "paths": {
       "@components/*": ["./components/*"],
       "@pages/*": ["./pages/*"],
-      "@resources/*": ["./resources/*"]
+      "@resources/*": ["./resources/*"],
+      "@src/*": ["./*"]
     }
   }
 }
