--- a/tsconfig.extend.json
+++ b/tsconfig.extend.json
@@ -5,6 +5,7 @@
       "@components/*": ["./components/*"],
       "@pages/*": ["./pages/*"],
       "@resources/*": ["./resources/*"],
+      "@models/*": ["./models/*"],
       "@src/*": ["./*"]
     }
   }
