--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,6 +14,5 @@
   "[scss]": {
     "editor.defaultFormatter": "vscode.css-language-features"
   },
-  "cSpell.words": ["autofix", "autofocus", "btns", "craco", "endregion", "Parens", "Viewd"],
-  "files.eol": "\r\n"
+  "cSpell.words": ["autofix", "autofocus", "btns", "craco", "endregion", "Parens", "Viewd"]
 }
