--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@craco/craco": "^7.1.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@hookform/resolvers": "^3.3.1",
     "@mui/material": "^5.14.6",
     "@reduxjs/toolkit": "^1.9.5",
     "@szhsin/react-accordion": "^1.2.3",
@@ -18,6 +19,7 @@
     "node-sass": "^9.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.46.1",
     "react-modal": "^3.16.1",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.15.0",
@@ -26,7 +28,8 @@
     "sass": "^1.65.1",
     "sass-loader": "^13.3.2",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^1.2.0"
   },
   "scripts": {
     "start": "craco start && eslint src/**/*.ts{,x}",
