--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-router-dom": "^6.15.0",
     "react-scripts": "^5.0.1",
     "redux": "^4.2.1",
+    "redux-persist": "^6.0.0",
     "sass": "^1.65.1",
     "sass-loader": "^13.3.2",
     "typescript": "^4.9.5",
