--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@craco/craco": "^7.1.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@hookform/resolvers": "^3.3.1",
     "@mui/material": "^5.14.6",
     "@szhsin/react-accordion": "^1.2.3",
     "@types/jest": "^27.5.2",
@@ -14,15 +15,22 @@
     "@types/node-sass": "^4.11.3",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
+    "axios": "^1.5.0",
     "node-sass": "^9.0.0",
     "react": "^18.2.0",
+    "react-axios": "^2.0.6",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.46.1",
     "react-router-dom": "^6.15.0",
     "react-scripts": "^5.0.1",
     "sass": "^1.65.1",
     "sass-loader": "^13.3.2",
     "typescript": "^4.9.5",
+    "redux": "^4.0.1",
     "web-vitals": "^2.1.4"
+  },
+  "overrides": {
+    "typescript": "^5.1.6"
   },
   "scripts": {
     "start": "craco start && eslint src/**/*.ts{,x}",
